# bitcoin-rust

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/resources/: bk-py.cbor  bk-rs.cbor  tx-py.cbor  tx-rs.cbor
lib/src/: crypto.py  crypto.rs  error.py  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.py  util.rs
lib/src/types/: block.py  block.rs  blockchain.py  blockchain.rs  transaction.py  transaction.rs
lib/src/types/py/: block.py  blockchain.py  crypto.py  network.py  transaction.py  util.py
miner/: Cargo.toml
miner/src/: main.rs  miner.rs
miner/src/py/: main.py  miner.py
node/: Cargo.toml
node/src/: main.rs  message_handler.rs  util.rs
node/src/py/: main.py  message_handler.py  util.py
src/: main.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs  tasks.rs  ui.rs  util.rs
