[package]
name = "btclib"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.5"
chrono = { version = "0.4.43", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.8", features = ["derive"] }
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
primitive-types = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
spki = "0.7.3"
thiserror = "2.0.18"
tokio = "1.49.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }