[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
btclib = { version = "0.1.0", path = "../lib" }
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
cursive = "0.21.1"
crossbeam-skiplist = "0.1.3"
flume = "0.12.0"
log = "0.4.29"
serde = { version = "1.0.204", features = ["derive"] }
text-to-ascii-art = "0.1.9"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }